ros2_study/log/build_2025-01-13_01-47-43/my_first_package/stderr.log
  File "/home/ian/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 5
    from time
             ^
SyntaxError: invalid syntax

